syntax = "proto3";

package auth;

import "proto/shared/session_types.proto";

option go_package = "evolvia/proto/auth";

service AuthService {
  rpc SendSessionToMiddleware (shared.SessionData) returns (shared.SessionResponse);
}
